--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onlang-org/onst",
-  "version": "1.0.3",
+  "version": "1.1.3",
   "description": "Helper repository for on-lang. Provides sample schema and example objects.",
   "main": "main.js",
   "bin": {
@@ -31,12 +31,13 @@
     "@octokit/rest": "^20.0.2",
     "commander": "^12.0.0",
     "dotenv": "^16.4.5",
-    "inquirer": "^8.0.0"
+    "inquirer": "^8.0.0",
+    "json-schema-faker": "^0.5.6",
+    "json-to-pretty-yaml": "^1.2.2"
   },
   "module": "index.js",
   "bugs": {
     "url": "https://github.com/onlang-org/onst/issues"
   },
-  "homepage": "https://github.com/onlang-org/onst#readme",
-  "devDependencies": {}
+  "homepage": "https://github.com/onlang-org/onst#readme"
 }
