--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@onlang-org/onst",
-  "version": "1.1.3",
-  "description": "Helper repository for on-lang. Provides sample schema and example objects.",
+  "version": "1.2.0",
+  "description": "Helper repository for on-lang. Provides sample schema and example objects from onst GitHub repository or Schemastore",
   "main": "main.js",
   "bin": {
     "onst": "cli.js"
@@ -29,6 +29,7 @@
   "license": "MIT",
   "dependencies": {
     "@octokit/rest": "^20.0.2",
+    "@onlang-org/onst-schemastore": "^1.2.2",
     "commander": "^12.0.0",
     "dotenv": "^16.4.5",
     "inquirer": "^8.0.0",
