--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onlang-org/onst",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Helper repository for on-lang. Provides sample schema and example objects from onst GitHub repository or Schemastore",
   "main": "main.js",
   "bin": {
@@ -36,7 +36,7 @@
     "json-schema-faker": "^0.5.6",
     "json-to-pretty-yaml": "^1.2.2"
   },
-  "module": "index.js",
+  "module": "main.js",
   "bugs": {
     "url": "https://github.com/onlang-org/onst/issues"
   },
